<?xml version="1.0"?>
<package>
  <name>frcred_gazebo</name>
  <version>0.0.0</version>
  <description>The frcred_gazebo package</description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>teleop_twist_keyboard</build_depend>
  <build_depend>gazebo_plugins</build_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>teleop_twist_keyboard</run_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
