<?xml version="1.0"?>
<package>
  <name>red_joy_teleop</name>
  <version>0.0.0</version>
  <description>The red team joystick control package</description>

  <maintainer email="jrivero@osrfoundation.org">Jose Luis Rivero</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>joy</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>joy</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
